--- a/templates/node24/devcontainer.json
+++ b/templates/node24/devcontainer.json
@@ -25,5 +25,5 @@
       ]
     }
   },
-  "postStartCommand": "node -v && npm -v && gh --version"
+  "postStartCommand": "sudo chown -R node:node /home/node/.config || true && node -v && npm -v && gh --version"
 }
