--- a/templates/node24-azure/devcontainer.json
+++ b/templates/node24-azure/devcontainer.json
@@ -24,5 +24,5 @@
       ]
     }
   },
-  "postStartCommand": "az --version"
+  "postStartCommand": "sudo chown -R node:node /home/node/.config || true && az --version"
 }
