fix docker file for astro

--- a/containers/node24-astro/Dockerfile
+++ b/containers/node24-astro/Dockerfile
@@ -10,16 +10,10 @@ RUN apt-get update \
      build-essential \
   && rm -rf /var/lib/apt/lists/*
 
-# --- Package managers and CLIs ---
-# Prefer corepack-managed pnpm; also install Astro CLI for DX
-RUN corepack enable \
-  && npm i -g pnpm@latest astro@latest create-astro@latest
+# --- CLIs ---
+# Install Astro CLI globally (npm-first); pnpm remains available via corepack if needed
+RUN npm i -g astro@latest create-astro@latest
 
 USER node
-
-# Helpful defaults in shell
-RUN echo '\n# Astro helpers' >> /home/node/.zshrc \
-  && echo "alias astro='astro'" >> /home/node/.zshrc \
-  && echo "alias pn=pnpm" >> /home/node/.zshrc
 
 WORKDIR /workspaces
