fix read only for .config

--- a/templates/node24-astro/devcontainer.json
+++ b/templates/node24-astro/devcontainer.json
@@ -25,5 +25,5 @@
   "portsAttributes": {
     "4321": { "label": "Astro Dev", "onAutoForward": "openBrowser" }
   },
-  "postStartCommand": "node -v && npm -v && astro --version"
+  "postStartCommand": "sudo chown -R node:node /home/node/.config || true && node -v && npm -v && astro --version"
 }
