add multi arch container images

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -45,6 +48,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: containers/node24
+          platforms: linux/amd64,linux/arm64
           push: true
           provenance: false
           cache-from: type=gha
@@ -81,6 +85,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -110,6 +117,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: ${{ matrix.variant.context }}
+          platforms: linux/amd64,linux/arm64
           push: true
           provenance: false
           cache-from: type=gha
