--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -150,8 +150,6 @@ jobs:
             context: containers/node24-gcloud-tofu
           - name: python-scaleway
             context: containers/node24-python-scaleway
-          - name: toolbox
-            context: containers/node24-toolbox
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -199,6 +197,184 @@ jobs:
             ${{ steps.ver.outputs.is_tag == 'true' && format('ghcr.io/totophe/dc-toolbelt:v{0}-node24-{1}', steps.ver.outputs.major, matrix.variant.name) || '' }}
             ${{ (steps.ver.outputs.is_tag == 'true' && steps.ver.outputs.minor != '') && format('ghcr.io/totophe/dc-toolbelt:v{0}.{1}-node24-{2}', steps.ver.outputs.major, steps.ver.outputs.minor, matrix.variant.name) || '' }}
             ${{ steps.ver.outputs.is_tag == 'true' && format('ghcr.io/totophe/dc-toolbelt:latest-node24-{0}', matrix.variant.name) || '' }}
+          labels: |
+            org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
+            org.opencontainers.image.description=dc-toolbelt - DevContainer images by totophe
+            org.opencontainers.image.licenses=MIT
+
+  # =========================================================================
+  # Toolbox chain: code → iac → toolbox (runs in parallel with cloud/extra)
+  # =========================================================================
+
+  build-toolbox-code:
+    needs: build-base
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Derive version variables
+        id: ver
+        shell: bash
+        run: |
+          echo "is_tag=false" >> "$GITHUB_OUTPUT"
+          if [[ "${GITHUB_REF_TYPE}" == "tag" && "${GITHUB_REF_NAME}" =~ ^v[0-9]+(\.[0-9]+){0,2}$ ]]; then
+            VERSION="${GITHUB_REF_NAME#v}"
+            IFS='.' read -r MAJOR MINOR PATCH <<< "${VERSION}"
+            echo "is_tag=true"     >> "$GITHUB_OUTPUT"
+            echo "version=${VERSION}" >> "$GITHUB_OUTPUT"
+            echo "major=${MAJOR}"  >> "$GITHUB_OUTPUT"
+            [[ -n "${MINOR}" ]] && echo "minor=${MINOR}" >> "$GITHUB_OUTPUT"
+            [[ -n "${PATCH}" ]] && echo "patch=${PATCH}" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Build & Push node24-toolbox-code
+        uses: docker/build-push-action@v6
+        with:
+          context: containers/node24-toolbox-code
+          platforms: linux/amd64,linux/arm64
+          push: true
+          provenance: false
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          tags: |
+            ghcr.io/totophe/dc-toolbelt:node24-toolbox-code
+            ${{ steps.ver.outputs.is_tag == 'true' && format('ghcr.io/totophe/dc-toolbelt:v{0}-node24-toolbox-code', steps.ver.outputs.version) || '' }}
+            ${{ steps.ver.outputs.is_tag == 'true' && format('ghcr.io/totophe/dc-toolbelt:v{0}-node24-toolbox-code', steps.ver.outputs.major) || '' }}
+            ${{ (steps.ver.outputs.is_tag == 'true' && steps.ver.outputs.minor != '') && format('ghcr.io/totophe/dc-toolbelt:v{0}.{1}-node24-toolbox-code', steps.ver.outputs.major, steps.ver.outputs.minor) || '' }}
+            ${{ steps.ver.outputs.is_tag == 'true' && 'ghcr.io/totophe/dc-toolbelt:latest-node24-toolbox-code' || '' }}
+          labels: |
+            org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
+            org.opencontainers.image.description=dc-toolbelt - DevContainer images by totophe
+            org.opencontainers.image.licenses=MIT
+
+  build-toolbox-iac:
+    needs: build-toolbox-code
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Derive version variables
+        id: ver
+        shell: bash
+        run: |
+          echo "is_tag=false" >> "$GITHUB_OUTPUT"
+          if [[ "${GITHUB_REF_TYPE}" == "tag" && "${GITHUB_REF_NAME}" =~ ^v[0-9]+(\.[0-9]+){0,2}$ ]]; then
+            VERSION="${GITHUB_REF_NAME#v}"
+            IFS='.' read -r MAJOR MINOR PATCH <<< "${VERSION}"
+            echo "is_tag=true"     >> "$GITHUB_OUTPUT"
+            echo "version=${VERSION}" >> "$GITHUB_OUTPUT"
+            echo "major=${MAJOR}"  >> "$GITHUB_OUTPUT"
+            [[ -n "${MINOR}" ]] && echo "minor=${MINOR}" >> "$GITHUB_OUTPUT"
+            [[ -n "${PATCH}" ]] && echo "patch=${PATCH}" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Build & Push node24-toolbox-iac
+        uses: docker/build-push-action@v6
+        with:
+          context: containers/node24-toolbox-iac
+          platforms: linux/amd64,linux/arm64
+          push: true
+          provenance: false
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          tags: |
+            ghcr.io/totophe/dc-toolbelt:node24-toolbox-iac
+            ${{ steps.ver.outputs.is_tag == 'true' && format('ghcr.io/totophe/dc-toolbelt:v{0}-node24-toolbox-iac', steps.ver.outputs.version) || '' }}
+            ${{ steps.ver.outputs.is_tag == 'true' && format('ghcr.io/totophe/dc-toolbelt:v{0}-node24-toolbox-iac', steps.ver.outputs.major) || '' }}
+            ${{ (steps.ver.outputs.is_tag == 'true' && steps.ver.outputs.minor != '') && format('ghcr.io/totophe/dc-toolbelt:v{0}.{1}-node24-toolbox-iac', steps.ver.outputs.major, steps.ver.outputs.minor) || '' }}
+            ${{ steps.ver.outputs.is_tag == 'true' && 'ghcr.io/totophe/dc-toolbelt:latest-node24-toolbox-iac' || '' }}
+          labels: |
+            org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
+            org.opencontainers.image.description=dc-toolbelt - DevContainer images by totophe
+            org.opencontainers.image.licenses=MIT
+
+  build-toolbox:
+    needs: build-toolbox-iac
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Derive version variables
+        id: ver
+        shell: bash
+        run: |
+          echo "is_tag=false" >> "$GITHUB_OUTPUT"
+          if [[ "${GITHUB_REF_TYPE}" == "tag" && "${GITHUB_REF_NAME}" =~ ^v[0-9]+(\.[0-9]+){0,2}$ ]]; then
+            VERSION="${GITHUB_REF_NAME#v}"
+            IFS='.' read -r MAJOR MINOR PATCH <<< "${VERSION}"
+            echo "is_tag=true"     >> "$GITHUB_OUTPUT"
+            echo "version=${VERSION}" >> "$GITHUB_OUTPUT"
+            echo "major=${MAJOR}"  >> "$GITHUB_OUTPUT"
+            [[ -n "${MINOR}" ]] && echo "minor=${MINOR}" >> "$GITHUB_OUTPUT"
+            [[ -n "${PATCH}" ]] && echo "patch=${PATCH}" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Build & Push node24-toolbox
+        uses: docker/build-push-action@v6
+        with:
+          context: containers/node24-toolbox
+          platforms: linux/amd64,linux/arm64
+          push: true
+          provenance: false
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          tags: |
+            ghcr.io/totophe/dc-toolbelt:node24-toolbox
+            ${{ steps.ver.outputs.is_tag == 'true' && format('ghcr.io/totophe/dc-toolbelt:v{0}-node24-toolbox', steps.ver.outputs.version) || '' }}
+            ${{ steps.ver.outputs.is_tag == 'true' && format('ghcr.io/totophe/dc-toolbelt:v{0}-node24-toolbox', steps.ver.outputs.major) || '' }}
+            ${{ (steps.ver.outputs.is_tag == 'true' && steps.ver.outputs.minor != '') && format('ghcr.io/totophe/dc-toolbelt:v{0}.{1}-node24-toolbox', steps.ver.outputs.major, steps.ver.outputs.minor) || '' }}
+            ${{ steps.ver.outputs.is_tag == 'true' && 'ghcr.io/totophe/dc-toolbelt:latest-node24-toolbox' || '' }}
           labels: |
             org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
             org.opencontainers.image.description=dc-toolbelt - DevContainer images by totophe
