--- a/containers/node24/Dockerfile
+++ b/containers/node24/Dockerfile
@@ -8,6 +8,7 @@ RUN apt-get update \
   && apt-get install -y --no-install-recommends \
      zsh git git-lfs curl wget ca-certificates gnupg nano less openssh-client \
      jq ripgrep locales postgresql-client sudo procps tree \
+     dnsutils net-tools iputils-ping traceroute \
   && rm -rf /var/lib/apt/lists/*
 
 # --- Grant passwordless sudo to node user ---
